force-app/main/default/objects/Billing_Process__c/Billing_Process__c.object-meta.xml
<CustomObject>
    <label>Billing Process</label>
    <nameField>
        <label>Billing ProcessName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Process</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>