force-app/main/default/objects/Billing_Process__c/fields/Laptop_Booking__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laptop Booking</label>
    <referenceTo>Laptop_Bookings__c</referenceTo>
    <relationshipLabel>Billing Process</relationshipLabel>
    <relationshipName>Billing_Process</relationshipName>
    <type>Lookup</type>
</CustomField>