force-app/main/default/objects/Billing_Process__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <referenceTo>consumer__c</referenceTo>
    <relationshipLabel>Billing Process</relationshipLabel>
    <relationshipName>Billing_Process</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>