force-app/main/default/objects/Billing_Process__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>Debit card</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Phonepe</fullName>
            </value>
            <value>
                <fullName>Gpay</fullName>
            </value>
            <value>
                <fullName>Paytm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>